--- a/css/section2.css
+++ b/css/section2.css
@@ -1,19 +1,19 @@
 /**
 *主要关于第二轮播图部分的css样式
 */
-.section2 .container {
+.section2>.container {
     display: flex;
     margin: 160px 0;
     padding: 0 60px;
     height: 778px;
 }
 
-.section2 .section-title {
+.section-title {
     flex: 0 0 280px;
 }
 
 
-.section2 .section-title .year-container{
+.section-title .year-container {
     background-color: #262626;
     border-radius: 4px;
     display: inline-block;
@@ -26,45 +26,51 @@
     font-weight: 500;
     margin-bottom: 8px;
 }
-.section2 .section-title h2{
+
+.section-title h2 {
     font-size: 48px;
     margin-bottom: 24px;
 }
-.section2 .section-title p a{
+
+.section-title p a {
     font-size: 20px;
     line-height: 1.5;
 }
-.section2 .section-title p a span{
+
+.section-title p a span {
     text-decoration: underline;
 }
-.section2 .section-banner{
+
+.section2 .section-banner {
     flex-grow: 1;
     overflow: hidden;
-    position:relative;
+    position: relative;
     /* aspect-ratio:36/25; */
 }
-.section2 .section-banner .imgs{
+
+.section2 .section-banner .imgs {
     display: flex;
-    gap:40px;
-    transition:transform 1s ;
+    gap: 40px;
+    transition: transform 1s;
 }
-.section2 .section-banner .imgs .img-container2 img{
+
+.section2 .section-banner .imgs .img-container2 img {
     width: 428px;
     height: 642px;
-    margin-bottom:16px;
+    margin-bottom: 16px;
 }
 
 .section2 .section-banner .left,
-.section2 .section-banner .right{
+.section2 .section-banner .right {
     opacity: 1;
     background-color: rgba(0 0 0 /12%);
     width: 40px;
     height: 120px;
     cursor: pointer;
-    margin:auto 20px;
-    position:absolute;
-    top:0;
-    bottom:0;
+    margin: auto 20px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
     background-repeat: no-repeat;
     background-position: center;
     background-size: auto 40px;
@@ -81,29 +87,31 @@
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23ffffff'%2F%3E%3C%2Fsvg%3E");
 }
 
-.section2 .section-banner  .left:hover,
-.section2 .section-banner  .right:hover{
+.section2 .section-banner .left:hover,
+.section2 .section-banner .right:hover {
     background-color: rgba(0 0 0 / 24%);
 }
 
-.section2 .section-banner .img-container2{
-    position:relative;
+.section2 .section-banner .img-container2 {
+    position: relative;
 }
-.section2 .section-banner .more.img{
+
+.more.img {
     width: 72px;
-    padding-left:26px;
+    padding-left: 26px;
     height: 44px;
     position: absolute;
-    top:0;
-    right:0;
+    top: 0;
+    right: 0;
     display: flex;
     align-items: center;
-    gap:5px;
+    gap: 5px;
     background-image: linear-gradient(225deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 50%);
     cursor: pointer;
-    z-index: 2;
+    z-index: 1;
 }
-.section2 .section-banner .more.img .dot{
+
+.more.img .dot {
 
     width: 7px;
     height: 7px;
@@ -111,11 +119,11 @@
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 12px 0px;
     cursor: pointer;
-    position:relative;
+    position: relative;
 }
 
-.section2 .section-banner .more.img:hover::before{
-    content:'';
+.more.img:hover::before {
+    content: '';
     display: block;
     position: absolute;
     top: 20px;
@@ -124,19 +132,18 @@
     border-bottom: 12px solid #fff;
 }
 
-.section2 .section-banner .more.img .item{
-    display:none;
-
-
+.more.img .item {
+    display: none;
 }
-.section2 .section-banner .more.img:hover .item{
+
+.more.img:hover .item {
     opacity: 1;
     display: block;
     width: 98px;
     height: 83px;
     position: absolute;
     top: 44px;
-    right:6px;
+    right: 6px;
     background-color: #fff;
     border-radius: 8px;
     display: flex;
@@ -144,47 +151,53 @@
     overflow: hidden;
 
 }
-.section2 .section-banner .more.img:hover .item .save,
-.section2 .section-banner .more.img:hover .item .share{
-    flex-grow:1;
+
+.more.img:hover .item .save,
+.more.img:hover .item .share {
+    flex-grow: 1;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.section2 .section-banner .more.img:hover .item .save{
+
+.more.img:hover .item .save {
     border-bottom: 1px solid #e5e5e5;
 }
-.section2 .section-banner .more.img:hover .item .save:hover,
-.section2 .section-banner .more.img:hover .item .share:hover{
+
+.more.img:hover .item .save:hover,
+.more.img:hover .item .share:hover {
     background-color: #f5f5f5;
 }
 
-.section2 .section-banner .imgs .img-container2 .img img:hover{
+.imgs .img-container2 .img img:hover {
     opacity: 0.5;
 }
 
-.section2 .section-banner .imgs .img-container2 .description{
+.imgs .img-container2 .description {
     width: 428px;
     height: 642px;
-    margin-bottom:16px;
-    position:absolute;
-    top:0;
+    margin-bottom: 16px;
+    position: absolute;
+    top: 0;
     opacity: 0;
 }
-.section2 .section-banner .imgs .img-container2 .description:hover{
+
+.imgs .img-container2 .description:hover {
     opacity: 1;
-    background-color: rgba(255,255,255,.9);
-}
-.section2 .section-banner .imgs .img-container2 .description .text{
-    font-size: 1rem;
-    line-height: 1.35;
-    margin:40px 16px;
+    background-color: rgba(255, 255, 255, .9);
 }
 
-@media (max-width:1025px){
+.imgs .img-container2 .description .text {
+    font-size: 1rem;
+    line-height: 1.35;
+    margin: 40px 16px;
+}
+
+@media (max-width:1025px) {
+
     /* 宽度小于1025px时，将第二轮播图部分改为竖向排列 */
-    .section2 .container{
+    .section2 .container {
         flex-direction: column;
     }
 }
